[project]
name = "st-xai"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch==2.5.1",
    "joblib",
    "xarray",
    "timeshap>=1.0.4",
    "shap<=0.42.1",
    "contextily>=1.7.0",
    "pyproj>=3.7.1",
    "captum>=0.8.0",
    "zarr>=2.18.3",
    "plotly>=6.6.0",
    "kaleido>=1.2.0",
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0.post1",
    "torchinfo>=1.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["xai_captum", "xai_region", "xai_timeshap"]
